alterar imagem do app

--- a/InglesCriancas/InglesCriancas/MainPage.xaml
+++ b/InglesCriancas/InglesCriancas/MainPage.xaml
@@ -9,7 +9,7 @@
 
     <StackLayout>
         <!-- Place new controls here -->
-        <Image Source="english"/>
+        <Image Source="bb"/>
         <Button Text="Cores"
                 HorizontalOptions="FillAndExpand"
                 VerticalOptions="FillAndExpand"
